--- a/frontend/src/Component/Header/style.css
+++ b/frontend/src/Component/Header/style.css
@@ -5,6 +5,7 @@
     align-items: center;
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(254,187,0,1) 0%, rgba(0,212,255,1) 100%);
+    height: 5vh;
 }
 .headerLinks{
 
@@ -15,14 +16,23 @@
 .link{
     list-style-type: none;
     font-family: 'Bangers', cursive;
-    font-size: 3vh;
-    margin-right: 2vh;
+    font-size: 2vh;
+    margin-right: 30px;
 }
-h1{
-    font-family: 'Orbitron', sans-serif
+#title{
+    font-family: 'Orbitron', sans-serif;
+    font-size: 3vh;
 }
 .linksContainer{
 display: flex;
 align-content: center;
 padding-right: 4vh;
+}
+.bannerContainer{
+    display: flex;
+    justify-content: center;
+}
+#banner{
+    width: 150vh;
+    height: 50vh;
 }
