--- a/frontend/src/Component/Header/style.css
+++ b/frontend/src/Component/Header/style.css
@@ -3,9 +3,8 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(254,187,0,1) 0%, rgba(0,212,255,1) 100%);
-    height: 5vh;
+    background-color: rgb(0, 0, 0);
+    height: 6vh;
 }
 .headerLinks{
 
@@ -18,10 +17,12 @@
     font-family: 'Bangers', cursive;
     font-size: 2vh;
     margin-right: 30px;
+    color: cornsilk;
 }
 #title{
     font-family: 'Orbitron', sans-serif;
     font-size: 3vh;
+    color: cornsilk;
 }
 .linksContainer{
 display: flex;
