feat: create global table

--- a/frontend/src/Component/TableRecords/style.css
+++ b/frontend/src/Component/TableRecords/style.css
@@ -98,22 +98,9 @@
 }
 
 
+.main-container-table{
 
-
-
-
-
-
-
-
-
-
-
-
-
-#main-container{
-	margin: 150px auto;
-    text-align: center;
+  text-align: center;
 }
 h1{
     font-family: 'Poiret One', cursive;
