--- a/frontend/src/Component/TableRecords/style.css
+++ b/frontend/src/Component/TableRecords/style.css
@@ -1,4 +1,3 @@
-
 .table-wrapper{
   margin: 10px 70px 70px;
   box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
@@ -38,10 +37,6 @@
   background: #324960;
 }
 
-.fl-table tr:nth-child(even) {
-
-}
-
 
 @media (max-width: 767px) {
   .fl-table {
@@ -67,7 +62,6 @@
   }
   .fl-table tbody {
       width: auto;
-      position: relative;
       overflow-x: auto;
   }
   .fl-table td, .fl-table th {
@@ -99,7 +93,6 @@
 
 
 .main-container-table{
-
   text-align: center;
 }
 h1{
@@ -185,10 +178,10 @@ tr:nth-child(even){
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     transition: all 0.3s;
+    border-radius: 10px;
   }
   
   .btn:after {
-    content: '';
     position: absolute;
     z-index: -1;
     -webkit-transition: all 2.3s;
@@ -210,15 +203,18 @@ tr:nth-child(even){
 
   .btn-sep {
     padding: 25px 60px 25px 120px;
+    
   }
   
   .btn-sep:before {
+    border-radius: 10px;
     background: rgba(0,0,0,0.15);
   }
 
   .btn-1 {
     background: #3498db;
     color: #fff;
+
   }
   
   .btn-1:hover {
