--- a/frontend/src/Component/Field/style.css
+++ b/frontend/src/Component/Field/style.css
@@ -16,8 +16,9 @@ position: relative;
 }
 
 label{
-    font-family: 'Electrolize', sans-serif;
-    letter-spacing: 8px;
+    font-family: 'Archivo', sans-serif;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
 }
 
 input{
@@ -29,21 +30,6 @@ input{
     border-radius: 3px;
     }
 
-.inputs::after{
-    content: "";
-    width: 0%;
-    height: 2px;
-    background-color: rgb(31, 203, 255);
-    position: absolute;
-    bottom:0;
-    left: 40%;
-    transform:  translateX(-50%);
-    transition: 0.8s all;
-}
-
-.inputs:hover::after{
-    width: 80%;
-}
 input:focus{
     outline: none;
 }
@@ -94,4 +80,39 @@ input:focus{
 }
 .selectForm:focus{
     outline: none;
+}
+
+
+
+
+
+
+@media (max-width: 438px) and (min-width: 200px){
+    .mainElementsContainer{
+        width: 250px;
+        height: 35px;
+    
+    }
+    .inputs{
+    align-items: center;
+    }
+    
+    label{
+        padding-right: 45px;
+    }
+    
+    input{
+        width: 120px;
+        height: 30px;
+    }
+    
+    
+    .inputContainer{
+        justify-content: space-evenly;
+    }
+    
+    .selectForm{
+        width: 120px;
+        height: 30px;
+    }
 }
