--- a/frontend/src/Component/Form/style.css
+++ b/frontend/src/Component/Form/style.css
@@ -1,3 +1,9 @@
+@media (max-width: 2000px) and (min-width: 955px){
+.mainFormContainer{
+    display: flex;
+    justify-content: center;
+}
+
 .form-registrer{
     display: flex;
     flex-direction: column;
@@ -11,8 +17,145 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background-image: linear-gradient(to top, #48c6ef 0%, #6f86d6 100%);
-    height: 60vh;
+    background: rgb(131,58,180);
+    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(18,14,7,1) 0%, rgba(123,122,120,1) 0%, rgba(236,47,16,1) 0%, rgba(133,122,120,1) 0%, rgba(175,57,57,1) 0%, rgba(69,68,68,1) 0%, rgba(0,0,0,1) 67%, rgba(0,0,0,1) 100%, rgba(125,122,124,1) 100%);
     width: 50vh;
-    border-radius: 20px;
+    height: 60vh;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    text-align: center;
+}
+
+.form-container h1{
+    font-family: 'Pathway Gothic One', sans-serif;
+    color: rgb(255, 255, 255);
+    letter-spacing: 3px;
+}
+.imgForm{
+    width: 50vh;
+    height: 60vh;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.imgContainer{
+    margin-top: 35px;
+    border-top-right-radius: 10px;
+}
+}
+
+
+@media (max-width: 995px) and (min-width: 426px){
+    .imgContainer{
+        display: none;
+    }
+    .mainFormContainer{
+        display: flex;
+        justify-content: center;
+    }
+    
+    .form-registrer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 35px;
+        opacity: 1;
+    }
+    
+    .form-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        background: rgb(131,58,180);
+        background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(18,14,7,1) 0%, rgba(123,122,120,1) 0%, rgba(236,47,16,1) 0%, rgba(133,122,120,1) 0%, rgba(175,57,57,1) 0%, rgba(69,68,68,1) 0%, rgba(0,0,0,1) 67%, rgba(0,0,0,1) 100%, rgba(125,122,124,1) 100%);
+        width: 50vh;
+        height: 60vh;
+        border-radius: 15px;
+        text-align: center;
+    }
+    .form-container h1{
+        font-family: 'Pathway Gothic One', sans-serif;
+        color: rgb(255, 255, 255);
+        letter-spacing: 3px;
+        font-size: 25px;
+    }
+}
+
+
+
+@media (max-width: 547px)  and (min-width: 435px){
+    .imgContainer{
+        display: none;
+    }
+    .mainFormContainer{
+        display: flex;
+        justify-content: center;
+    }
+    
+    .form-registrer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 35px;
+        opacity: 1;
+    }
+    
+    .form-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        background: rgb(131,58,180);
+        background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(18,14,7,1) 0%, rgba(123,122,120,1) 0%, rgba(236,47,16,1) 0%, rgba(133,122,120,1) 0%, rgba(175,57,57,1) 0%, rgba(69,68,68,1) 0%, rgba(0,0,0,1) 67%, rgba(0,0,0,1) 100%, rgba(125,122,124,1) 100%);
+        width: 40vh;
+        height: 50vh;
+        border-radius: 15px;
+        text-align: center;
+    }
+    .form-container h1{
+        font-family: 'Pathway Gothic One', sans-serif;
+        color: rgb(255, 255, 255);
+        letter-spacing: 3px;
+        font-size: 20px;
+    }
+}
+
+
+@media (max-width: 435px)  and (min-width: 200px){
+    .imgContainer{
+        display: none;
+    }
+    .mainFormContainer{
+        display: flex;
+        justify-content: center;
+    }
+    
+    .form-registrer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 35px;
+        opacity: 1;
+        
+    }
+    
+    .form-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        background: rgb(131,58,180);
+        background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(18,14,7,1) 0%, rgba(123,122,120,1) 0%, rgba(236,47,16,1) 0%, rgba(133,122,120,1) 0%, rgba(175,57,57,1) 0%, rgba(69,68,68,1) 0%, rgba(0,0,0,1) 67%, rgba(0,0,0,1) 100%, rgba(125,122,124,1) 100%);
+        width: 35vh;
+        height: 50vh;
+        border-radius: 15px;
+    }
+    .form-container h1{
+        font-family: 'Pathway Gothic One', sans-serif;
+        color: rgb(255, 255, 255);
+        letter-spacing: 3px;
+        font-size: 18px;
+        text-align: center;
+    }
 }
