--- a/frontend/src/Component/NavBar/style.css
+++ b/frontend/src/Component/NavBar/style.css
@@ -27,6 +27,7 @@
     right: -100%;
     transition: 850ms;
     font-family: 'Cormorant Unicase', serif;
+    z-index: 2000;
   }
   
   .nav-menu.active {
@@ -77,7 +78,7 @@
   }
 
   @media (max-width: 450px) and (min-width: 200px) {
-   #title{
+    #title{
     display: none;
     }
     .navbar {
