--- a/frontend/src/Component/Footer/style.css
+++ b/frontend/src/Component/Footer/style.css
@@ -7,6 +7,7 @@
     height: 10vh;
     text-align: center;
     position: absolute;
+    margin-top: 45px;
 }
 .footer p{
     color: rgb(255, 255, 255);
