--- a/frontend/src/Component/Form/style.css
+++ b/frontend/src/Component/Form/style.css
@@ -17,8 +17,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background: rgb(131,58,180);
-    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(18,14,7,1) 0%, rgba(123,122,120,1) 0%, rgba(236,47,16,1) 0%, rgba(133,122,120,1) 0%, rgba(175,57,57,1) 0%, rgba(69,68,68,1) 0%, rgba(0,0,0,1) 67%, rgba(0,0,0,1) 100%, rgba(125,122,124,1) 100%);
+    background-color: rgb(20, 20, 20);
     width: 50vh;
     height: 80vh;
     border-top-right-radius: 10px;
@@ -67,8 +66,7 @@
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
-        background: rgb(131,58,180);
-        background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(18,14,7,1) 0%, rgba(123,122,120,1) 0%, rgba(236,47,16,1) 0%, rgba(133,122,120,1) 0%, rgba(175,57,57,1) 0%, rgba(69,68,68,1) 0%, rgba(0,0,0,1) 67%, rgba(0,0,0,1) 100%, rgba(125,122,124,1) 100%);
+        background-color: rgb(20, 20, 20);
         width: 50vh;
         height: 80vh;
         border-radius: 15px;
@@ -107,8 +105,7 @@
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
-        background: rgb(131,58,180);
-        background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(18,14,7,1) 0%, rgba(123,122,120,1) 0%, rgba(236,47,16,1) 0%, rgba(133,122,120,1) 0%, rgba(175,57,57,1) 0%, rgba(69,68,68,1) 0%, rgba(0,0,0,1) 67%, rgba(0,0,0,1) 100%, rgba(125,122,124,1) 100%);
+        background-color: rgb(20, 20, 20);
         width: 40vh;
         height: 80vh;
         border-radius: 15px;
@@ -118,6 +115,15 @@
         color: rgb(255, 255, 255);
         letter-spacing: 3px;
         font-size: 18px;
+        text-align: center;
+    }
+}
+@media (max-height: 670px) and (min-height: 300px){
+    .form-container h1{
+        font-family: 'Pathway Gothic One', sans-serif;
+        color: rgb(255, 255, 255);
+        letter-spacing: 3px;
+        font-size: 15px;
         text-align: center;
     }
 }
