--- a/frontend/src/Component/NavBar/style.css
+++ b/frontend/src/Component/NavBar/style.css
@@ -1,6 +1,6 @@
 
 .navbar {
-    background-color: #060b26;
+    background-color: #000000;
     height: 80px;
     display: flex;
     justify-content:space-evenly;
@@ -17,7 +17,7 @@
   }
   
   .nav-menu {
-    background-color: #060b26;
+    background-color: #000000;
     width: 250px;
     height: 100vh;
     display: flex;
@@ -65,7 +65,7 @@
   }
   
   .navbar-toggle {
-    background-color: #060b26;
+    background-color: #000000;
     width: 100%;
     height: 80px;
     display: flex;
@@ -76,9 +76,12 @@
   span {
     margin-left: 16px;
   }
-
+  .logo{
+    width: 200px;
+    height: 8vh;
+  }
   @media (max-width: 450px) and (min-width: 200px) {
-    #title{
+    .logo{
     display: none;
     }
     .navbar {
