--- a/frontend/src/Component/GlobalTable/style.css
+++ b/frontend/src/Component/GlobalTable/style.css
@@ -1,80 +1,41 @@
-.blue { color: #185875; }
-.yellow { color: #FFF842; }
-.container{
+.styledTable {
+    margin: 0 auto;
+    font-size: 1.5em;
+    font-family: 'Goldman', cursive;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    width:70vw;
+}
+.styledTable thead tr {
+    background-color: #0595d8;
+    color: #ffffff;
     text-align: center;
 }
-.container th h1 {
-	font-weight: bold;
-	font-size: 1em;
-    text-align: left;
-    color: #185875;
+
+.styledTable th,
+.styledTable td {
+    padding: 12px 15px;
+}
+.styledTable td {
+    opacity: 0.8;
+}
+.styledTable tbody tr {
+    
+}
+
+.styledTable tbody tr:nth-of-type(even) {
+    background-color: #ffffff;
+}
+
+.styledTable tbody tr:nth-of-type(odd) {
+    background-color: #d9eef1;
     text-align: center;
-    font-size: 30px;
 }
 
-.container td {
-	font-weight: normal;
-	font-size: 1em;
-    -webkit-box-shadow: 0 2px 2px -2px #0E1119;
-	-moz-box-shadow: 0 2px 2px -2px #0E1119;
-	box-shadow: 0 2px 2px -2px #0E1119;
+
+.styledTable tbody tr.active-row {
+    border-radius: 15px;
     text-align: center;
-    color:rgb(250, 92, 92);
-    font-size: 35px;
-    font-family: 'Orbitron', sans-serif;
 }
 
 
-.container {
-	text-align: left;
-	overflow: hidden;
-	width: 70%;
-	margin: 0 auto;
-    display: table;
-    padding: 0 0 8em 0;
-}
-
-.container td, .container th {
-	padding-bottom: 2%;
-	padding-top: 2%;
-    padding-left:2%;  
-}
-
-.container tr:nth-child(odd) {
-	background-color: #323C50;
-}
-
-
-.container tr:nth-child(even) {
-	background-color: #2C3446;
-}
-
-.container th {
-	background-color: #000000;
-}
-
-.container td:first-child { 
-    color: #98dd9d; 
-    font-size: 35px;
-    font-family: 'Orbitron', sans-serif;
-}
-
-.container tr:hover {
-    background-color: #000000;
-    -webkit-box-shadow: 0 6px 6px -6px #0E1119;
-	-moz-box-shadow: 0 6px 6px -6px #0E1119;
-	box-shadow: 0 6px 6px -6px #0E1119;
-}
-
-.container td:hover {
-    background-color: #f7f5c9;
-    color: #000000;
-    font-weight: bold;
-    box-shadow: #7F7C21 -1px 1px, #7F7C21 -2px 2px, #7F7C21 -3px 3px, #7F7C21 -4px 4px, #7F7C21 -5px 5px, #7F7C21 -6px 6px;
-    transform: translate3d(6px, -6px, 0);
-    transition-delay: 0s;
-	transition-duration: 0.4s;
-	transition-property: all;
-    transition-timing-function: line;
-}
 
