--- a/frontend/src/Component/HomeTable/style.css
+++ b/frontend/src/Component/HomeTable/style.css
@@ -24,7 +24,6 @@
     font-family: 'Orbitron', sans-serif;
 }
 
-
 .container {
 	text-align: left;
 	overflow: hidden;
@@ -58,7 +57,9 @@
     font-size: 35px;
     font-family: 'Orbitron', sans-serif;
 }
-
+#rrr{
+    color:rgb(250, 92, 92);
+}
 .container tr:hover {
     background-color: #000000;
     -webkit-box-shadow: 0 6px 6px -6px #0E1119;
