--- a/frontend/src/Component/Field/style.css
+++ b/frontend/src/Component/Field/style.css
@@ -10,6 +10,7 @@ label{
     font-family: 'Archivo', sans-serif;
     color: rgb(255, 255, 255);
     font-weight: bold;
+    font-size: 1.2rem;
 }
 
     .inputs{
