--- a/frontend/src/Component/GlobalTable/style.css
+++ b/frontend/src/Component/GlobalTable/style.css
@@ -1,3 +1,11 @@
+.formRecordContainer{
+display: flex;
+justify-content: center;
+align-items: center;
+width: 80vw;
+margin:0 auto;
+}
+
 .styledTable {
     margin: 0 auto;
     font-size: 1.5em;
@@ -14,6 +22,7 @@
 .styledTable th,
 .styledTable td {
     padding: 12px 15px;
+    color: rgb(0, 0, 0);
 }
 .styledTable td {
     opacity: 0.8;
@@ -24,6 +33,7 @@
 
 .styledTable tbody tr:nth-of-type(even) {
     background-color: #ffffff;
+    text-align: center;
 }
 
 .styledTable tbody tr:nth-of-type(odd) {
@@ -83,6 +93,11 @@
         letter-spacing: 1px;
         }
         
+        .inputsGlobalTable{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         
         .editButton{
             display: inline-block;
@@ -100,3 +115,19 @@
             transform: scale(1.1);
             outline: none;
         }
+
+
+        @media (max-width: 600px) and (min-width: 300px){
+            .formRecordContainer{
+                display: flex;
+                flex-direction: column;
+            }
+    }
+
+
+    @media (max-width: 1000px) and (min-width: 600px){
+        .formRecordContainer{
+            display: flex;
+            flex-direction: column;
+        }
+}
