--- a/frontend/src/Component/FormUpdate/style.css
+++ b/frontend/src/Component/FormUpdate/style.css
@@ -18,6 +18,9 @@
     margin-bottom: 15px;
     position:relative;
 }
+.mainUpdateFormContainer h3 {
+   font-size: 35px;
+}
 .updater{
     display: flex;
     flex-direction: column;
@@ -27,16 +30,6 @@
     align-self: center;
     padding-left: 60px;
     height: 10vh;
-}
-.notFound{
-    display: flex;
-    justify-content: center;
-    background-color: rgb(255, 116, 116);
-    margin-right: 50px;
-    border-radius: 12px;
-}
-.notFound h2{
-    font-size:25px;
 }
 
 .buttonUpdater{
@@ -50,10 +43,10 @@
     font-size: 1rem;
     border-radius: 10px;
     letter-spacing: 1px;
-    margin: 0 auto;
+    margin-top: 55px;
 }
 
-.buttonUpdater, .notFound{
+.buttonUpdater {
     display: inline-block;
     vertical-align: middle;
     -webkit-transform: perspective(1px) translateZ(0);
@@ -66,11 +59,8 @@
 }
 .buttonUpdater:hover,
 .loadInputs:hover, 
-.notFound:hover,
 .buttonUpdater:focus, 
 .loadInputs:focus, 
-.notFound:focus,
-.notFound:active,
 .buttonUpdater:active , 
 .loadInputs:active{
 
@@ -95,18 +85,9 @@
 }
 
 @media (max-width: 1500px)and (min-width: 1000px){
-.notFound{
-    display: flex;
-    justify-content: center;
-    background-color: rgb(255, 116, 116);
-    margin-right: 50px;
-    border-radius: 12px;
-    height: 15vh;
-    width: 20vw;
-}
-.notFound h2{
-    font-size:20px;
-}
+.mainUpdateFormContainer{
+    height: 37vh;
+    }
 }
 
 
@@ -132,7 +113,6 @@
         height: 5vh;
         font-family: 'Goldman', cursive;
         font-size: 0.8rem;
-        margin-top: 5px;
     }
 }
 
@@ -158,13 +138,16 @@
         height: 5vh;
         font-family: 'Goldman', cursive;
         font-size: 0.8rem;
-        margin-top: 5px;
+       
     }
 }
 @media (max-width: 500px)and (min-width: 200px){
     .mainUpdateFormContainer{
         width: 75vw;
-        height: 42vh;
+        height: 48vh;
+    }
+    .mainUpdateFormContainer h3{
+    font-size: 1em;
     }
     .updater{
         height: 15vh;
@@ -183,6 +166,5 @@
         height: 5vh;
         font-family: 'Goldman', cursive;
         font-size: 0.8rem;
-        margin-top: 5px;
     }
 }
