--- a/frontend/src/Component/HomeTable/style.css
+++ b/frontend/src/Component/HomeTable/style.css
@@ -57,7 +57,7 @@
     font-size: 35px;
     font-family: 'Orbitron', sans-serif;
 }
-#rrr{
+#negativeAmout{
     color:rgb(250, 92, 92);
 }
 .container tr:hover {
