--- a/frontend/src/Component/Footer/style.css
+++ b/frontend/src/Component/Footer/style.css
@@ -7,7 +7,10 @@
     height: 10vh;
     text-align: center;
     position: absolute;
-    margin-top: 45px;
+
+}
+.mainFooterContainer{
+    margin-top: 500px;
 }
 .footer p{
     color: rgb(255, 255, 255);
