--- a/frontend/src/Component/Field/style.css
+++ b/frontend/src/Component/Field/style.css
@@ -1,4 +1,4 @@
-@media (max-width: 2000px) and (min-width: 1000px){
+
 .mainElementsContainer{
     width: 250px;
     height: 5vh;
@@ -73,155 +73,28 @@ option{
     font-family: 'Cutive Mono', monospace;
     font-size: 12.5px;
 }
-}
+
 
 @media (max-width: 1000px) and (min-width: 500px){
     .mainElementsContainer{
-        width: 250px;
         height: 6vh;
-        display: flex;
-        align-items: center;
     }
-    
-    label{
-        font-family: 'Archivo', sans-serif;
-        color: rgb(255, 255, 255);
-        font-weight: bold;
-    }
-    
-        .inputs{
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            position: relative;
-        }
-    
     input{
-        width: 200px;
         height: 5vh;
-        border :none;
-        font-family: 'Rajdhani', sans-serif;
-        font-size: 20px;
-        font-weight: bold;
-        border-radius: 3px;
-    
     }
-    
-    input:focus{
-        outline: none;
-    }
-    .submit{
-        border-radius: 5px;
-    }
-    
-    .inputContainer{
-        width: 250px;
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: center;
-        justify-content: space-between;
-        
-    }
-    #selectForm{
-        background-color: rgb(255, 255, 255);
-        width: 200px;
-        height: 4vh;
-        font-size: 20px;
-        border:none;
-        font-family: 'Rajdhani', sans-serif;
-        font-weight: bold;
-    }
-    option{
-        font-weight: bold;
-    }
-    #selectForm:focus{
-        outline: none;
-    }
-    
-    .submitButton{
-        border-radius: 3px;
-        background: rgb(131,58,180);
-        background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(38,184,244,1) 0%, rgba(123,122,120,1) 0%, rgba(236,47,16,1) 0%, rgba(133,122,120,1) 0%, rgba(175,57,57,1) 0%, rgba(69,68,68,1) 0%, rgba(0,0,0,1) 0%, rgba(0,37,67,1) 0%, rgba(0,69,125,1) 0%, rgba(0,94,169,1) 0%, rgba(0,138,247,1) 100%, rgba(0,0,0,1) 100%);
-        color:rgb(255, 255, 255);
-    }
+
     .errorMessage{
-        color:rgb(235, 140, 128);
-        font-family: 'Cutive Mono', monospace;
         font-size: 15px;
     }
 }
 
 @media (max-width: 500px) and (min-width: 200px){
-    .mainElementsContainer{
-        width: 250px;
-        height: 6vh;
-        display: flex;
-        align-items: center;
-    }
-    
-    label{
-        font-family: 'Archivo', sans-serif;
-        color: rgb(255, 255, 255);
-        font-weight: bold;
-    }
-    
-        .inputs{
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            position: relative;
-        }
-    
-    input{
-        width: 200px;
-        height: 4vh;
-        border :none;
-        font-family: 'Rajdhani', sans-serif;
-        font-size: 20px;
-        font-weight: bold;
-        border-radius: 3px;
-    }
-    
-    input:focus{
-        outline: none;
-    }
-    .submit{
-        border-radius: 5px;
-    }
-    
+
     .inputContainer{
-        width: 230px;
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: center;
-        justify-content: space-between;
         margin-top: 10px;
     }
-    
-    #selectForm{
-        background-color: rgb(255, 255, 255);
-        width: 200px;
-        height: 4vh;
-        font-size: 20px;
-        border:none;
-        font-family: 'Rajdhani', sans-serif;
-        font-weight: bold;
-    }
-    option{
-        font-weight: bold;
-    }
-    #selectForm:focus{
-        outline: none;
-    }
-    .submitButton{
-        border-radius: 3px;
-        background: rgb(131,58,180);
-        background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(38,184,244,1) 0%, rgba(123,122,120,1) 0%, rgba(236,47,16,1) 0%, rgba(133,122,120,1) 0%, rgba(175,57,57,1) 0%, rgba(69,68,68,1) 0%, rgba(0,0,0,1) 0%, rgba(0,37,67,1) 0%, rgba(0,69,125,1) 0%, rgba(0,94,169,1) 0%, rgba(0,138,247,1) 100%, rgba(0,0,0,1) 100%);
-        color:rgb(255, 255, 255);
-    }
+
     .errorMessage{
-        color:rgb(235, 140, 128);
-        font-family: 'Cutive Mono', monospace;
         font-size: 14px;
     }
 }
@@ -229,81 +102,35 @@ option{
 
 @media (max-height: 670px) and (min-height: 300px){
     .mainElementsContainer{
-        width: 250px;
         height: 7vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        width: 55vw;
     }
     
     label{
-        font-family: 'Archivo', sans-serif;
-        color: rgb(255, 255, 255);
-        font-weight: bold;
         padding-left: 15px;
         font-size: 15px;
         margin-bottom:10px ;
     }
-    
-        .inputs{
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            position: relative;
-        }
-    
+
     input{
         width: 150px;
-        height: 4vh;
-        border :none;
-        font-family: 'Rajdhani', sans-serif;
-        font-size: 20px;
-        font-weight: bold;
-        border-radius: 3px;
-    }
-    
-    input:focus{
-        outline: none;
-    }
-    .submit{
-        border-radius: 5px;
     }
     
     .inputContainer{
         width: 230px;
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: center;
-        justify-content: space-between;
         margin-top: 10px;
     }
     
     #selectForm{
-        background-color: rgb(255, 255, 255);
         width: 150px;
         height: 4vh;
-        font-size: 20px;
-        border:none;
-        font-family: 'Rajdhani', sans-serif;
-        font-weight: bold;
     }
-    option{
-        font-weight: bold;
-    }
-    #selectForm:focus{
-        outline: none;
-    }
+
     .submitButton{
-        border-radius: 3px;
         font-size: 12px;
         width: 100px;
-        background: rgb(131,58,180);
-        background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(38,184,244,1) 0%, rgba(123,122,120,1) 0%, rgba(236,47,16,1) 0%, rgba(133,122,120,1) 0%, rgba(175,57,57,1) 0%, rgba(69,68,68,1) 0%, rgba(0,0,0,1) 0%, rgba(0,37,67,1) 0%, rgba(0,69,125,1) 0%, rgba(0,94,169,1) 0%, rgba(0,138,247,1) 100%, rgba(0,0,0,1) 100%);
-        color:rgb(255, 255, 255);
     }
     .errorMessage{
-        color:rgb(235, 140, 128);
-        font-family: 'Cutive Mono', monospace;
         font-size: 10px;
     }
 }
