--- a/frontend/src/Component/Form/style.css
+++ b/frontend/src/Component/Form/style.css
@@ -23,7 +23,8 @@
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     text-align: center;
-    border-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .form-container h1{
