--- a/frontend/src/Pages/CreateAccount/style.css
+++ b/frontend/src/Pages/CreateAccount/style.css
@@ -1,28 +1,30 @@
-.mainCreateAccountContainer{
+.mainUserFormContainer{
     display: flex;
-    background: rgb(63,94,251);
-    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(144,197,237,1) 100%, rgba(74,252,70,1) 100%);
+background-image: url('../../Images//form-user-wallpaper.jpg');
     border-radius: 15px;
-    height: 45vh;
-    width: 25vw;
+    height: 50vh;
+    width: 20vw;
     margin: 0 auto;
     padding-bottom: 15px;
     justify-content: center;
     align-items: center;
-    align-content: center;
     margin-top: 45px;
     text-align: center;
+    border: 2px solid black;
 }
-.CreateAccountInputsContainer{
+.mainUserFormContainer h1{
+    color: rgb(255, 255, 255);
+}
+.secondaryUserContainer{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     padding-left: 45px;
     text-align: left;
-    margin: 25px;
+
 }
-.CreateAccountButton{
+.buttonUserForm{
     margin-top: 15px;
     background-color: rgb(80, 253, 239);
 }
@@ -33,7 +35,7 @@
     font-family: 'Orbitron', sans-serif;
 }
 
-.CreateAccountButton {
+.buttonUserForm {
     display: inline-block;
     vertical-align: middle;
     -webkit-transform: perspective(1px) translateZ(0);
@@ -44,11 +46,80 @@
     -webkit-transition-property: transform;
     transition-property: transform;
 }
-.CreateAccountButton:hover,
-.CreateAccountButton:focus, 
-.CreateAccountButton:active{
+.buttonUserForm:hover,
+.buttonUserForm:focus, 
+.buttonUserForm:active{
 
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
     outline: none;
+}
+.formAccountLink{ 
+    text-decoration: none;
+    font-family: 'Exo', sans-serif;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 12px;
+}
+
+
+@media (max-width: 1700px) and (min-width: 1000px){
+    .mainUserFormContainer{
+        width: 30vw;
+        height: 60vh
+    }
+    .secondaryUserContainer{
+        height: 35vh;
+        width: 50vw;
+        justify-content: space-around;
+    }
+    .formAccountLink{ 
+        justify-content: center;
+    }
+}
+
+@media (max-width: 1000px) and (min-width: 500px){
+    .mainUserFormContainer{
+        width: 50vw;
+        height: 60vh
+    }
+    .secondaryUserContainer{
+        height: 35vh;
+        width: 50vw;
+        justify-content: space-around;
+    }
+    .formAccountLink{ 
+        justify-content: center;
+    }
+}
+
+@media (max-width: 500px) and (min-width: 200px){
+    .mainUserFormContainer{
+        width: 70vw;
+        height: 60vh;
+       
+    }
+    .mainUserFormContainer h1{
+        font-size: 25px;
+    } 
+
+    .secondaryUserContainer{
+        height: 35vh;
+        width: 50vw;
+        justify-content: space-around;
+    }
+    .formAccountLink{ 
+        justify-content: center;
+    }
+}
+
+@media (max-height: 700px){
+    .secondaryUserContainer{
+        height: 35vh;
+        width: 50vw;
+        align-items: flex-end;
+    }
 }
