--- a/frontend/src/Component/Form/style.css
+++ b/frontend/src/Component/Form/style.css
@@ -2,6 +2,7 @@
 .mainFormContainer{
     display: flex;
     justify-content: center;
+    
 }
 
 .form-registrer{
@@ -17,13 +18,12 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background-image: url('../../Images/form-records-wallpaper.jpg');
+    background-image: url('../../Images/form-user-wallpaper.jpg');
     width: 50vh;
     height: 80vh;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
     text-align: center;
-    border-radius: 15px;
 }
 
 .form-container h1{
@@ -53,6 +53,9 @@
     .form-container h1{
         font-size: 25px;
     }
+    .form-container{
+    border-radius: 15px;
+    }
 }
 
 
@@ -63,7 +66,7 @@
     }
     
     .form-container{
-
+        border-radius: 15px;
         width: 40vh;
 
     }
@@ -75,7 +78,9 @@
 }
 @media (max-height: 670px) and (min-height: 300px){
     
-
+    .form-container{
+        border-radius: 15px;
+    }
     .form-container h1{
         text-align: center;
     }
