--- a/frontend/src/Component/Field/style.css
+++ b/frontend/src/Component/Field/style.css
@@ -71,7 +71,8 @@ option{
 .errorMessage{
     color:rgb(255, 30, 0);
     font-family: 'Cutive Mono', monospace;
-    font-size: 12.5px;
+    font-weight: bold;
+    font-size: 1rem;
 }
 
 
