--- a/frontend/src/Component/FormUpdate/style.css
+++ b/frontend/src/Component/FormUpdate/style.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    background: rgb(63,94,251);
-    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(144,197,237,1) 100%, rgba(74,252,70,1) 100%);
+    background: rgb(2,0,36);
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(92,68,10,1) 0%, rgba(27,34,228,1) 0%, rgba(162,4,161,1) 0%, rgba(249,214,248,1) 0%, rgba(241,23,240,1) 0%, rgba(59,179,221,1) 0%, rgba(195,12,194,1) 0%, rgba(13,246,47,0.3337710084033614) 0%, rgba(221,59,155,1) 0%, rgba(76,80,77,1) 0%, rgba(25,34,5,1) 0%, rgba(78,125,3,1) 0%, rgba(0,0,0,1) 0%, rgba(0,253,255,1) 100%, rgba(198,92,54,1) 100%, rgba(169,204,96,1) 100%, rgba(240,8,67,1) 100%, rgba(0,0,0,1) 100%);
     margin: 0 auto;
     font-size: 1.5em;
     font-family: 'Goldman', cursive;
@@ -86,7 +86,7 @@
 
 @media (max-width: 1500px)and (min-width: 1000px){
 .mainUpdateFormContainer{
-    height: 37vh;
+    height: 42vh;
     }
 }
 
