--- a/frontend/src/Component/DashTable/style.css
+++ b/frontend/src/Component/DashTable/style.css
@@ -22,6 +22,7 @@
     font-family: 'Open Sans Condensed', sans-serif;
     text-align: center;
     margin-bottom: 15px;
+    margin-top: 90px;
     background: rgb(238,174,202);
     background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
@@ -38,12 +39,11 @@
 }
 #infoTable{
     width: 25vw;
-    height: 13.5vh;
+    height: 15.5vh;
 }
 
 .dashTablesContainer{
     display: flex;
-  
     justify-content: center;
 }
     .customers td, .customers th {
@@ -56,11 +56,11 @@
     font-size: 1.2rem;
 }
 #deleteInfo{
-    width: 10vw;
+    width: 7vw;
 }
 #seeInfo{
     background-color: rgb(141, 253, 219);
-    width: 10vw;
+    width: 7vw;
 }
 
     .customers tr:nth-child(n){background-color: #f2f2f2;}
